# image_grayscale_converter

./: Cargo.toml  package-lock.json  package.json  webpack.config.js
public/: main.js
src/: lib.rs
