[package]
name = "image_effects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
base64 = "0.21.5"
image = "0.23.14"

[dependencies.web-sys]
version = "0.3.66"
features = ["console"]
